--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Zoom clone</title>
-        <script src="script.js"></script>
+        
     </head>
     <body>
-        <h1>Hello World!!!!!!!!!!</h1>
+        <div id="video-grid"></div>
     </body>
+    <script src="script.js"></script>
 </html>
