--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,32 @@
+body {
+    margin: 0;
+    padding: 0;
+}
 #video-grid {
     display: flex;
     justify-content: center;
 }
-
+.main {
+    height: 100vh;
+    display: flex;
+}
+.main__left {
+    flex: 0.8;
+}
+.main__right{
+    flex: 0.2;
+}
+.main__videos {
+    flex-grow: 1;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main__left {
+    display: flex;
+    flex-direction: column;
+}
 video {
     height: 300px;
     width: 400px;
