--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,33 @@ body {
     display: flex;
     flex-direction: column;
 }
+.main__controls {
+    display: flex;
+    background-color: #1C1E20;
+    padding: 5px;
+    color: #d2d2d2;
+    justify-content: space-between;
+}
+
+.main__controls__block {
+    display: flex;
+}
+.main__controls__button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 10px;
+    min-width: 80px;
+    cursor: pointer;
+}
+.main__controls__button:hover {
+    background-color: #343434;
+    border-radius: 5px;
+}
+.main__controls__button i{
+   font-size: 24px;
+}
 video {
     height: 300px;
     width: 400px;
