--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Zoom clone</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/fe1ac3848e.js" crossorigin="anonymous"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
         <script>
@@ -12,13 +13,42 @@
         </script>
     </head>
     <body>
-
         <div class="main">
             <div class="main__left">
                 <div class="main__videos">
                     <div id="video-grid"></div>
                 </div>
-                <div class="main__controls"></div>
+                <div class="main__controls">
+                    <div class="main__controls__block">
+                        <div class="main__controls__button">
+                            <i class="fas fa-microphone"></i>
+                            <span>Mute</span>
+                        </div>
+                        <div class="main__controls__button">
+                            <i class="fas fa-video-slash"></i>
+                            <span>Stop Video</span>
+                        </div>
+                    </div>
+                    <div class="main__controls__block">
+                        <div class="main__controls__button">
+                            <i class="fas fa-lock-open"></i>
+                            <span>Security</span>
+                        </div>
+                        <div class="main__controls__button">
+                            <i class="fas fa-users"></i>
+                            <span>Participants</span>
+                        </div>
+                        <div class="main__controls__button">
+                            <i class="fas fa-comments"></i>
+                            <span>Chat</span>
+                        </div>
+                    </div>
+                    <div class="main__controls__block">
+                        <div class="main__controls__button">
+                            <span style="color: red;">Leave Meeting</span>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="main__right">
